--- a/app/src/main/res/menu/menu_bottom_navigation.xml
+++ b/app/src/main/res/menu/menu_bottom_navigation.xml
@@ -2,17 +2,16 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/bottom_navigation_main"
-        android:icon="@drawable/ic_home"
-        android:title="@string/main_navigation"/>
+        android:icon="@drawable/ic_navig"
+        android:title="@string/main_navigation" />
 
     <item
         android:id="@+id/bottom_navigation_history"
-        android:icon="@drawable/ic_history"
-        android:title="@string/history_navigation"/>
+        android:icon="@drawable/ic_map"
+        android:title="@string/history_navigation" />
 
     <item
         android:id="@+id/bottom_navigation_settings"
-        android:icon="@drawable/ic_settings"
-        android:title="@string/settings_settings"/>
-
+        android:icon="@drawable/ic_profile"
+        android:title="@string/settings_settings" />
 </menu>
