--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,10 +8,12 @@
         <item name="colorAccent">@color/colorAccent</item>
         <item name="android:textColorSecondary">@color/colorAccent</item>
     </style>
-    <style name="Splash_screen" parent="Theme.AppCompat.Light">
+
+    <style name="Splash_screen">
         <item name="android:windowBackground">@drawable/splash_logo</item>
     </style>
-    <style name="StartButtonStyle" parent="Theme.AppCompat.Light">
+
+    <style name="StartButtonStyle">
         <item name="android:background">@drawable/start_button_style</item>
         <item name="android:layout_marginTop">100dp</item>
         <item name="android:layout_below">@+id/spinner_difficulty</item>
