removed settitle from viewpager

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,6 +8,8 @@
         <item name="android:textColorSecondary">@color/colorAccent</item>
         <item name="android:windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
+        <item name="android:statusBarColor">@color/colorAccent</item>
+
     </style>
 
     <style name="Splash_screen" parent="Theme.AppCompat.Light.NoActionBar">
