--- a/app/src/main/res/layout/fragment_quiz.xml
+++ b/app/src/main/res/layout/fragment_quiz.xml
@@ -87,7 +87,8 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_below="@+id/text_view_category"
-            android:layout_marginTop="5dp" />
+            android:layout_marginTop="5dp"
+            app:popupTextAlignment="start" />
 
         <TextView
             android:id="@+id/text_view_difficulty"
@@ -105,7 +106,8 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_below="@+id/text_view_difficulty"
-            android:layout_marginTop="5dp" />
+            android:layout_marginTop="5dp"
+            app:popupTextAlignment="start"/>
 
         <Button
             android:id="@+id/quiz_start_button"
