--- a/app/src/main/res/layout/fragment_quiz.xml
+++ b/app/src/main/res/layout/fragment_quiz.xml
@@ -13,7 +13,7 @@
         android:layout_marginTop="32dp"
         android:fontFamily="@font/sf_text_semi_bold"
         android:text="@string/quiz"
-        android:textColor="#000"
+        android:textColor="@color/colorOfTextViewQuiz"
         android:textSize="28dp" />
 
     <RelativeLayout
@@ -42,7 +42,7 @@
             android:fontFamily="@font/sf_text_semi_bold"
             android:lineSpacingExtra="6sp"
             android:text="@string/quiz_questions_amount"
-            android:textColor="#A9A9A9" />
+            android:textColor="@color/colorOfTextViewDifficulty" />
 
         <TextView
             android:id="@+id/text_view_amount"
@@ -63,13 +63,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/quiz_amount"
-            app:rangeColor="#BE52F2"
-            app:scaleMax="50"
-            app:scaleMin="1"
-            app:scaleStep="1"
-            app:thumbColor="#BE52F2"
+            app:rangeColor="@color/colorOfSeekBar"
+            app:thumbColor="@color/colorOfSeekBar"
             app:thumbNumber="1"
-            app:trackColor="#ECEBED" />
+            app:trackColor="@color/colorOfSeekBarTrack" />
 
         <TextView
             android:id="@+id/text_view_category"
@@ -80,7 +77,7 @@
             android:layout_marginTop="13dp"
             android:fontFamily="@font/sf_text_semi_bold"
             android:text="@string/quiz_category"
-            android:textColor="#A9A9A9" />
+            android:textColor="@color/colorOfTextViewDifficulty" />
 
         <org.angmarch.views.NiceSpinner
             android:id="@+id/spinner_category"
@@ -99,7 +96,7 @@
             android:layout_marginTop="10dp"
             android:fontFamily="@font/sf_text_semi_bold"
             android:text="@string/quiz_difficulty"
-            android:textColor="#A9A9A9" />
+            android:textColor="@color/colorOfTextViewDifficulty" />
 
         <org.angmarch.views.NiceSpinner
             android:id="@+id/spinner_difficulty"
@@ -107,11 +104,11 @@
             android:layout_height="50dp"
             android:layout_below="@+id/text_view_difficulty"
             android:layout_marginTop="5dp"
-            app:popupTextAlignment="start"/>
+            app:popupTextAlignment="start" />
 
         <Button
-            android:id="@+id/quiz_start_button"
             style="@style/StartButtonStyle"
+            android:id="@+id/quiz_start_button"
             android:layout_width="match_parent"
             android:layout_height="55dp"
             android:layout_marginTop="77dp"
