--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,10 +2,13 @@
 <resources>
     <color name="colorPrimary">#FFFFFF</color>
     <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#ECEBED</color>
+    <color name="colorAccent">#FFFFFF</color>
     <color name="colorSplash">#fff</color>
     <color name="colorOfStartButton">#fff</color>
     <color name="colorOfStartButtonBackground">#6979F8</color>
-    <color name="colorOfSeekBar">#584F5F</color>
     <color name="colorOfBottomNavIconSelected">#BE52F2</color>
+    <color name="colorOfSeekBar">#BE52F2</color>
+    <color name="colorOfSeekBarTrack">#ECEBED</color>
+    <color name="colorOfTextViewDifficulty">#A9A9A9</color>
+    <color name="colorOfTextViewQuiz">#000</color>
 </resources>
