--- a/app/src/main/res/layout/fragment_history.xml
+++ b/app/src/main/res/layout/fragment_history.xml
@@ -1,14 +1,93 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.fragments.history.HistoryFragment">
+    android:padding="16dp"
+    tools:context=".ui.main.MainActivity">
 
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center_horizontal|center_vertical"
-        android:text="History" />
+        android:id="@+id/history"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        android:fontFamily="@font/sf_text_semi_bold"
+        android:text="@string/history"
+        android:textColor="@color/colorOfTextViewQuiz"
+        android:textSize="28sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-</FrameLayout>
+    <TextView
+        android:id="@+id/rectangle_container"
+        android:layout_width="match_parent"
+        android:layout_height="105dp"
+        android:layout_marginTop="29dp"
+        android:elevation ="20dp"
+        android:shadowColor="@color/colorOfTextViewDifficulty"
+        android:shadowRadius="10"
+        app:layout_constraintTop_toBottomOf="@+id/history" />
+
+    <TextView
+        android:id="@+id/category_text_view_history"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/history"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        android:fontFamily="@font/sf_text_semi_bold"
+        android:text="@string/category"
+        android:textColor="@color/colorOfTextViewQuiz"
+        android:textSize="19sp"
+        app:layout_constraintStart_toStartOf="@+id/rectangle_container"
+        app:layout_constraintTop_toTopOf="@+id/rectangle_container" />
+
+    <TextView
+        android:id="@+id/correct_answers_text_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="13.2dp"
+        android:fontFamily="@font/sf_pro_display_light"
+        android:text="@string/correct_answers"
+        android:textSize="14sp"
+        app:layout_constraintStart_toStartOf="@+id/rectangle_container"
+        app:layout_constraintTop_toBottomOf="@+id/category_text_view_history" />
+
+    <TextView
+        android:id="@+id/difficulty_text_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="9dp"
+        android:fontFamily="@font/sf_pro_display_light"
+        android:text="@string/difficulty_easy"
+        android:textSize="14sp"
+        app:layout_constraintStart_toStartOf="@+id/rectangle_container"
+        app:layout_constraintTop_toBottomOf="@+id/correct_answers_text_view" />
+
+    <TextView
+        android:id="@+id/history_time"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="85dp"
+        android:layout_marginEnd="18dp"
+        android:textSize="11sp"
+        android:text="@string/history_time"
+        android:fontFamily="@font/sf_pro_display_light"
+        app:layout_constraintEnd_toEndOf="@+id/rectangle_container"
+        app:layout_constraintTop_toTopOf="@+id/rectangle_container" />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="20dp"
+        android:background="@drawable/ic_more_horizonatl"
+        app:layout_constraintBottom_toBottomOf="@+id/category_text_view_history"
+        app:layout_constraintEnd_toEndOf="@+id/rectangle_container"
+        app:layout_constraintTop_toTopOf="@+id/category_text_view_history"
+        tools:ignore="ContentDescription" />
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
