--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -3,12 +3,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.fragments.settings.SettingsFragment">
+    tools:context=".ui.main.MainActivity">
 
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center_horizontal|center_vertical"
-        android:text="Settings" />
+        android:id="@+id/history"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="19dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginBottom="20dp"
+        android:fontFamily="@font/sf_text_semi_bold"
+        android:text="@string/settings_fragment"
+        android:textColor="@color/colorOfTextViewQuiz"
+        android:textSize="28sp" />
 
 </FrameLayout>
