--- a/app/src/main/res/layout/item_history_view_holder.xml
+++ b/app/src/main/res/layout/item_history_view_holder.xml
@@ -12,8 +12,12 @@
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:cardElevation="15dp"
+        android:layout_height="match_parent"
+        android:layout_margin="8dp"
+        android:layout_marginTop="20dp"
+        app:cardCornerRadius="4dp"
+        app:cardElevation="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -24,7 +28,6 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="12dp"
             android:layout_marginTop="8dp"
-            android:ellipsize="end"
             android:fontFamily="@font/sf_text_semi_bold"
             android:text="@string/category"
             android:textColor="@color/colorOfTextViewQuiz"
