--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -39,11 +39,12 @@
 
     <TextView
         android:id="@+id/share_this_text_view"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="23dp"
-        android:layout_marginTop="32dp"
         android:fontFamily="@font/sf_pro_display_light"
+        android:paddingStart="23dp"
+        android:paddingTop="32dp"
+        android:paddingBottom="32dp"
         android:text="@string/share_app"
         android:textColor="@color/colorOfTextViewQuiz"
         android:textSize="18sp"
@@ -54,7 +55,6 @@
         android:id="@+id/view2"
         android:layout_width="match_parent"
         android:layout_height="0.5dp"
-        android:layout_marginTop="32dp"
         android:background="@color/colorOfTextViewQuiz"
         app:layout_constraintTop_toBottomOf="@+id/share_this_text_view" />
 
@@ -70,11 +70,12 @@
 
     <TextView
         android:id="@+id/rate_us_text_view"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="23dp"
-        android:layout_marginTop="32dp"
         android:fontFamily="@font/sf_pro_display_light"
+        android:paddingStart="23dp"
+        android:paddingTop="32dp"
+        android:paddingBottom="32dp"
         android:text="@string/rate_us"
         android:textColor="@color/colorOfTextViewQuiz"
         android:textSize="18sp"
@@ -85,7 +86,6 @@
         android:id="@+id/view3"
         android:layout_width="match_parent"
         android:layout_height="0.5dp"
-        android:layout_marginTop="32dp"
         android:background="@color/colorOfTextViewQuiz"
         app:layout_constraintTop_toBottomOf="@+id/rate_us_text_view" />
 
@@ -101,11 +101,12 @@
 
     <TextView
         android:id="@+id/leave_feedback_us_text_view"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="23dp"
-        android:layout_marginTop="32dp"
         android:fontFamily="@font/sf_pro_display_light"
+        android:paddingStart="23dp"
+        android:paddingTop="32dp"
+        android:paddingBottom="32dp"
         android:text="@string/leave_feedback"
         android:textColor="@color/colorOfTextViewQuiz"
         android:textSize="18sp"
@@ -116,7 +117,6 @@
         android:id="@+id/view4"
         android:layout_width="match_parent"
         android:layout_height="0.5dp"
-        android:layout_marginTop="32dp"
         android:background="@color/colorOfTextViewQuiz"
         app:layout_constraintTop_toBottomOf="@+id/leave_feedback_us_text_view" />
 
@@ -132,11 +132,12 @@
 
     <TextView
         android:id="@+id/clear_history_text_view"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="23dp"
-        android:layout_marginTop="32dp"
         android:fontFamily="@font/sf_pro_display_light"
+        android:paddingStart="23dp"
+        android:paddingTop="32dp"
+        android:paddingBottom="32dp"
         android:text="@string/clear_history"
         android:textColor="@color/colorOfBottomNavIconSelected"
         android:textSize="18sp"
@@ -147,7 +148,17 @@
         android:id="@+id/view5"
         android:layout_width="match_parent"
         android:layout_height="0.5dp"
-        android:layout_marginTop="32dp"
         android:background="@color/colorOfTextViewQuiz"
         app:layout_constraintTop_toBottomOf="@+id/clear_history_text_view" />
+
+    <TextView
+        android:id="@+id/version_text_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="141dp"
+        android:text="@string/version"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/view5" />
 </androidx.constraintlayout.widget.ConstraintLayout>
