--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,13 +6,18 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorPrimary">@color/colorOfBottomNavIconSelected</item>
         <item name="android:statusBarColor" tools:targetApi="m">#FFF</item>
+        <item name="android:windowBackground">@color/colorAccent</item>
         <item name="android:windowLightStatusBar" tools:targetApi="m">true</item>
         <item name="android:windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
     </style>
 
-    <style name="Splash_screen" parent="Theme.AppCompat.Light.NoActionBar">
+    <style name="Splash_screen" parent="Theme.AppCompat.Light.DarkActionBar">
         <item name="android:windowBackground">@drawable/splash_logo</item>
+        <item name="android:statusBarColor" tools:targetApi="m">#FFF</item>
+        <item name="android:windowLightStatusBar" tools:targetApi="m">true</item>
+        <item name="android:windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
     </style>
 
     <style name="StartButtonStyle">
