--- a/app/src/main/res/layout/fragment_quiz.xml
+++ b/app/src/main/res/layout/fragment_quiz.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:padding="16dp"
     tools:context=".ui.main.MainActivity">
 
@@ -11,7 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:fontFamily="@font/sf_text_semi_bold"
+        android:fontFamily="@font/sf_pro_text_bold"
         android:text="@string/quiz"
         android:textColor="@color/colorOfTextViewQuiz"
         android:textSize="28dp" />
@@ -85,7 +85,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/text_view_category"
             android:layout_marginTop="5dp"
-            android:elevation="6dp"
+            android:elevation="2dp"
             app:popupTextAlignment="start" />
 
         <TextView
@@ -105,7 +105,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/text_view_difficulty"
             android:layout_marginTop="5dp"
-            android:elevation="6dp"
+            android:elevation="2dp"
             app:popupTextAlignment="start" />
 
         <Button
