--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -7,12 +7,12 @@
     tools:context=".ui.main.MainActivity">
 
     <TextView
-        android:id="@+id/history"
+        android:id="@+id/settings"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="23dp"
         android:layout_marginTop="32dp"
-        android:fontFamily="@font/sf_text_semi_bold"
+        android:fontFamily="@font/sf_pro_text_bold"
         android:text="@string/settings_fragment"
         android:textColor="@color/colorOfTextViewQuiz"
         android:textSize="28sp"
@@ -23,9 +23,9 @@
         android:id="@+id/view"
         android:layout_width="match_parent"
         android:layout_height="0.5dp"
-        android:layout_marginTop="44dp"
+        android:layout_marginTop="34dp"
         android:background="@color/colorOfTextViewQuiz"
-        app:layout_constraintTop_toBottomOf="@+id/history" />
+        app:layout_constraintTop_toBottomOf="@+id/settings" />
 
     <ImageView
         android:id="@+id/image_view_1"
@@ -41,7 +41,7 @@
         android:id="@+id/share_this_text_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/sf_pro_display_light"
+        android:fontFamily="@font/sf_text_display_regular"
         android:paddingStart="23dp"
         android:paddingTop="32dp"
         android:paddingBottom="32dp"
@@ -72,7 +72,7 @@
         android:id="@+id/rate_us_text_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/sf_pro_display_light"
+        android:fontFamily="@font/sf_text_display_regular"
         android:paddingStart="23dp"
         android:paddingTop="32dp"
         android:paddingBottom="32dp"
@@ -103,7 +103,7 @@
         android:id="@+id/leave_feedback_us_text_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/sf_pro_display_light"
+        android:fontFamily="@font/sf_text_display_regular"
         android:paddingStart="23dp"
         android:paddingTop="32dp"
         android:paddingBottom="32dp"
@@ -134,7 +134,7 @@
         android:id="@+id/clear_history_text_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/sf_pro_display_light"
+        android:fontFamily="@font/sf_text_display_regular"
         android:paddingStart="23dp"
         android:paddingTop="32dp"
         android:paddingBottom="32dp"
